--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ body{
     font-size: 11rem;
     font-family: 'Pacifico', cursive;
     color: #fff;
-    padding:0 ; /* Remove any padding */
-    margin: 0; /* Remove any margin */
+    padding:0 ; 
+    margin: 0; 
 }
 .intro{
     min-height: 50vh;
